# rusty-head-snake

./: Cargo.toml  README.md  index.html  rusty-head-snake.wasm
.github/workflows/: ci.yml
levels/: level_1.json  level_2.json  level_3.json  level_4.json  level_5.json
rusty-head-snake/: Cargo.toml
rusty-head-snake/src/: constants.rs  game_loop.rs  main.rs  snake.rs  target.rs
src/: constants.rs  game.rs  graphic_utils.rs  level.rs  main.rs  menu.rs  snake.rs  target.rs  text.rs  touch_fields.rs
src/level/: base_levels.rs
